Changed template generation by removing scalling coefficients in templates. Changed Experiment explanation added section on 'ugly' patters.

--- a/Data_generation.ipynb
+++ b/Data_generation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "b5b82091",
    "metadata": {},
    "outputs": [],
@@ -26,8 +26,8 @@
     "from adaptive_spacing import adaptive_geomspace, smart_grid_smooth\n",
     "from template_generation_jax import (\n",
     "    chunked,\n",
-    "    generate_ellipsoid_diffraction,\n",
-    "    generate_parallelepiped_diffraction,\n",
+    "    generate_ellipsoid_diffraction_complex,\n",
+    "    generate_parallelepiped_diffraction_complex,\n",
     "    generate_spaced_rotations,\n",
     "    q_from_xyz,\n",
     "    xyyz_from_detector_geometry,\n",
@@ -62,14 +62,29 @@
     "## Forward model of the measurement\n",
     "\n",
     "\n",
-    "$ I_{det} =  \\mathcal{P}\\left\\{ \\mathcal{S\\left\\{ M \\left\\{ \\mathrm{D_{ideal}} \\right\\} \\right\\}} \\right\\} $,\n",
+    "$ I_{det} =  \\mathcal{P}\\left\\{ \\mathcal{S\\left\\{ M \\left\\{ |\\mathrm{D_{ideal}}|^2 \\right\\} \\right\\}} \\right\\} $,\n",
     "where $I_{det}$ is measured intensity in photons, $\\mathcal{P}$ is a Poisson sampling, $\\mathcal{S}$ is scaling by total amount of photons, $\\mathcal{M}$ is masking operation and $\\mathrm{D_{ideal}}$ is the ideal diffraction distribution calculated from shape parameters.\n",
     "\n",
     "So in python it will be like:\n",
     "```\n",
-    "I_masked =  I_simmulated * mask\n",
+    "I_masked =  (np.abs(D_simmulated)**2) * mask\n",
     "I_scaled =  I_masked/I_masked.sum() * total_photons\n",
     "I_det =  np.random.poisson(I_scaled)\n",
+    "```\n",
+    "\n",
+    "Also, we need to simmulate 'ugly' particles such as agglomerates or particles with uneven density distribution. One way to do that is to modulate the idealized particle density with gaussian blured random distribution with variable sigma, where larger sigma corresponds to more ideal particles.\n",
+    "\n",
+    "\n",
+    "in that case detector intensity can be calculated as \n",
+    "```\n",
+    "random_modulation  = 1+(np.random.rand(360,360))*np.exp(1j*np.random.rand(360,360)*np.pi)# it's a random complex number added to the unity transmission\n",
+    "random_modulation = gaussian_filter(random_modulation,sigma=1)\n",
+    "# here sigma controls the ugliness of the particle, where ~ 5 is almost perfect, 1-2 is border  region and 0.1-0.5 is very ugly \n",
+    "D_modulated = fftn(ifftn(D_modulated,axes=(-1,-2))*random_modulation,axes=(-1,-2))\n",
+    "I_masked =  (np.abs(D_simmulated)**2) * mask\n",
+    "I_scaled =  I_masked/I_masked.sum() * total_photons\n",
+    "I_det =  np.random.poisson(I_scaled)\n",
+    "\n",
     "```"
    ]
   },
@@ -99,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "31aa63d1",
    "metadata": {},
    "outputs": [],
@@ -121,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "956515c7",
    "metadata": {},
    "outputs": [],
@@ -154,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "455a7f14",
    "metadata": {},
    "outputs": [],
@@ -163,7 +178,7 @@
     "\n",
     "\n",
     "def generate_sphere_diffraction(q_xyz, r):\n",
-    "    return generate_ellipsoid_diffraction(q_xyz, r, r, r, 0, 0, 0)\n",
+    "    return generate_ellipsoid_diffraction_complex(q_xyz, r, r, r, 0, 0, 0)\n",
     "\n",
     "\n",
     "generate_sphere_diffraction_v = jax.jit(\n",
@@ -173,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "05942685",
    "metadata": {},
    "outputs": [
@@ -202,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "290b4d15",
    "metadata": {},
    "outputs": [],
@@ -220,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "e757ae90",
    "metadata": {},
    "outputs": [],
@@ -229,7 +244,7 @@
     "\n",
     "\n",
     "def generate_ellipsoid_in_plane_diffraction(q_xyz, A, B, phi):\n",
-    "    return generate_ellipsoid_diffraction(q_xyz, A, B, A, 0, 0, phi)\n",
+    "    return generate_ellipsoid_diffraction_complex(q_xyz, A, B, A, 0, 0, phi)\n",
     "\n",
     "\n",
     "generate_ellipsoid_in_plane_diffraction_v = jax.jit(\n",
@@ -239,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "73aa6615",
    "metadata": {},
    "outputs": [],
@@ -273,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "35c58f9b",
    "metadata": {},
    "outputs": [
@@ -312,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "a1e60448",
    "metadata": {},
    "outputs": [],
@@ -330,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "3e1bd369",
    "metadata": {},
    "outputs": [],
@@ -339,7 +354,7 @@
     "\n",
     "\n",
     "def generate_square_diffraction(q_xyz, r, phi):\n",
-    "    return generate_parallelepiped_diffraction(q_xyz, r, r, r, 0, 0, phi)\n",
+    "    return generate_parallelepiped_diffraction_complex(q_xyz, r, r, r, 0, 0, phi)\n",
     "\n",
     "\n",
     "generate_square_diffraction_v = jax.jit(\n",
@@ -349,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "e848c2bd",
    "metadata": {},
    "outputs": [
@@ -359,7 +374,7 @@
        "<HDF5 dataset \"patterns\": shape (2250, 360, 360), type \"<f4\">"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "ae54a23a",
    "metadata": {},
    "outputs": [],
@@ -412,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "9fcef150",
    "metadata": {},
    "outputs": [],
@@ -421,7 +436,7 @@
     "\n",
     "\n",
     "def generate_rect_in_plane_diffraction(q_xyz, A, B, phi):\n",
-    "    return generate_parallelepiped_diffraction(q_xyz, A, B, A, 0, 0, phi)\n",
+    "    return generate_parallelepiped_diffraction_complex(q_xyz, A, B, A, 0, 0, phi)\n",
     "\n",
     "\n",
     "generate_rectangle_in_plane_diffraction_v = jax.jit(\n",
@@ -431,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "5d4ed41b",
    "metadata": {},
    "outputs": [],
@@ -465,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "e4741579",
    "metadata": {},
    "outputs": [
@@ -504,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "b0cbc125",
    "metadata": {},
    "outputs": [],
@@ -522,20 +537,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "069be85c",
    "metadata": {},
    "outputs": [],
    "source": [
     "generate_parallelepiped_diffraction_v = jax.jit(\n",
-    "    jax.vmap(generate_parallelepiped_diffraction, in_axes=(None, 0, 0, 0, 0, 0, 0))\n",
+    "    jax.vmap(generate_parallelepiped_diffraction_complex, in_axes=(None, 0, 0, 0, 0, 0, 0))\n",
     ")\n",
     "# jax.jit(jax.vmap(( generate_parallelepiped_diffraction,(None,0,0,0,0,0,0))))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 19,
    "id": "03ce6733",
    "metadata": {},
    "outputs": [],
@@ -545,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "bd6f25b0",
    "metadata": {},
    "outputs": [
@@ -595,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "c39101f6",
    "metadata": {},
    "outputs": [
@@ -692,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "2047ebc4",
    "metadata": {},
    "outputs": [],
@@ -710,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "afc80986",
    "metadata": {},
    "outputs": [
@@ -720,7 +735,7 @@
        "<HDF5 dataset \"scattered_photons\": shape (7966,), type \"<i8\">"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "21715a72",
    "metadata": {},
    "outputs": [],
@@ -756,7 +771,7 @@
    "source": [
     "## Add Ugly patterns \n",
     "\n",
-    "TBD"
+    "Uggly patterns can be obtained from the simmullated ones by modulation, check ***Experment_explanation.ipynb***"
    ]
   }
  ],
